@@ -7,6 +7,7 @@ Broker:
 - Strip whitespace from end of config file string options. Closes #1566.
 - Satisfy valgrind when exiting on error due to not being able to open a
   listening socket, by calling freeaddrinfo. Closes #1565.
+- Fix config->user not being freed on exit. Closes #1564.
 
 
 1.6.8 - 20191128
